Fix build of example_headerbar.cc

Make the type of the variable icon a Glib::RefPtr<const Gio::Icon> so that
it will build on Visual Studio, or when GTKMM_DISABLE_DEPRECATED is not
defined.

	* demos/gtk-demo/example_headerbar.cc: Fix build on Visual Studio
	  and when GTKMM_DISABLE_DEPRECATED is not defined, and add note
	  regarding to the usage of 'const'.

https://bugzilla.gnome.org/show_bug.cgi?id=736847